--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
+// Custom styles variables
+:root {
+    --primary-color: #0b1a29;
+    --secondary-color: #5d1f04;
+    --contrast-color: #e67a00;
+    --light-color: #fffbf5;
+    --dark-color: #0f0905;
+}
