Update login card header color and font weight

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,7 @@
 #login-card-header {
     background-color: var(--contrast-color);
-    color: #fffbf5;
+    color: var(--light-color);
+    font-weight: bold;
 }
 
 #login-card-body {
