--- a/public/css/login.css
+++ b/public/css/login.css
@@ -23,9 +23,14 @@
 /* inputs */
 
 #email:focus,
-#password:focus {
+#password:focus,
+#remember:focus {
     border-color: var(--contrast-color);
     box-shadow: 0 0 0 0.25rem rgba(230, 122, 0, 0.25);
+}
+
+#remember:checked {
+    background-color: var(--contrast-color);
 }
 
 /* login card button */
