--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,10 @@
+/* general styles */
+
 .container {
     background-color: var(--light-color);
 }
+
+/* card styles */
 
 .card {
     overflow: hidden;
@@ -35,7 +39,7 @@
 
 /* login card button */
 
-.login-button {
+#login-button {
     background-color: transparent;
     color: var(--contrast-color);
     border: 1px solid var(--contrast-color);
@@ -47,16 +51,15 @@
 
 /* login button hover */
 
-.login-button:hover {
+#login-button:hover {
     background-color: var(--contrast-color);
-    color: #0b1a29;
+    color: var(--light-color);
     border-color: var(--contrast-color);
 }
 
-/* // Color variables
+/* forgot password link */
 
-$primary-color: #0b1a29;
-$secondary-color: #5d1f04;
-$contrast-color: var(--contrast-color
-$light-color: #fffbf5;
-$dark-color: #0f0905; */
+#forgot-psw {
+    color: var(--contrast-color);
+    transition: color 0.3s;
+}
