--- a/public/css/gm-create.css
+++ b/public/css/gm-create.css
@@ -2,4 +2,41 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    box-shadow: 0 0 1px 0 var(--primary-color);
+    background-color: #fcefe0;
+}
+
+/* input fields */
+
+#location:focus,
+#max_players:focus,
+#game_description:focus {
+    border-color: var(--contrast-color);
+    box-shadow: 0 0 0 0.25rem rgba(230, 122, 0, 0.25);
+}
+
+#game_description,
+#location,
+#profile_img {
+    background-color: var(--light-color);
+}
+
+/* create button */
+
+#create-button {
+    background-color: transparent;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    padding: 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+/* create button hover */
+
+#create-button:hover {
+    background-color: var(--contrast-color);
+    color: var(--light-color);
+    border-color: var(--contrast-color);
 }
