Update background color in gm-create form

--- a/public/css/gm-create.css
+++ b/public/css/gm-create.css
@@ -3,7 +3,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 0 1px 0 var(--primary-color);
-    background-color: #fcefe0;
+    background-color: #e2e4e5;
 }
 
 /* input fields */
