--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -6,6 +6,7 @@
     --contrast-color: #e67a00;
     --light-color: #fffbf5;
     --dark-color: #0f0905;
+    --light-color-card: #fff8ee;
 }
 
 #app {
