--- a/public/css/gm-create.css
+++ b/public/css/gm-create.css
@@ -3,14 +3,15 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 0 1px 0 var(--primary-color);
-    background-color: #e2e4e5;
+    background-color: var(--light-color-card);
 }
 
 /* input fields */
 
 #location:focus,
 #max_players:focus,
-#game_description:focus {
+#game_description:focus,
+#profile_img:focus {
     border-color: var(--contrast-color);
     box-shadow: 0 0 0 0.25rem rgba(230, 122, 0, 0.25);
 }
