--- a/public/css/admin-layout.css
+++ b/public/css/admin-layout.css
@@ -13,3 +13,23 @@
     background-color: var(--contrast-color);
     color: var(--light-color);
 }
+
+#header {
+    background-color: var(--primary-color);
+    width: 100%;
+}
+
+/* logo */
+.logo {
+    width: 65px;
+    height: 65px;
+}
+
+.logo img {
+    width: 100%;
+}
+/* navbar */
+.navbar-link ul {
+    list-style: none;
+    padding-left: 0;
+}
