Update admin layout and add GM index CSS

--- a/public/css/admin-layout.css
+++ b/public/css/admin-layout.css
@@ -1,7 +1,7 @@
 /* sidebar */
 
 #sidebarMenu {
-    background-color: #8e624f;
+    background-color: var(--secondary-color);
 }
 
 #sidebarMenu a {
