Update GM card styling and add game master info

--- a/public/css/gm-index.css
+++ b/public/css/gm-index.css
@@ -1,3 +1,7 @@
 #gm-card {
     background-color: var(--light-color-card);
 }
+
+#gm-card-body {
+    background-color: var(--light-color-card-hover);
+}
