--- a/public/css/admin-layout.css
+++ b/public/css/admin-layout.css
@@ -14,6 +14,7 @@
     color: var(--light-color);
 }
 
+/* HEADER */
 #header {
     background-color: var(--primary-color);
     width: 100%;
@@ -28,8 +29,54 @@
 .logo img {
     width: 100%;
 }
+
 /* navbar */
 .navbar-link ul {
     list-style: none;
     padding-left: 0;
+}
+
+/* FOOTER */
+
+/* FOOTER TOP */
+#footer {
+    background-color: var(--primary-color);
+    padding: 10px 0;
+    width: 100%;
+    color: var(--light-color);
+}
+
+#footer a {
+    text-decoration: none;
+    color: white;
+}
+
+#footer ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.button button {
+    background-color: var(--contrast-color);
+    color: black;
+}
+
+.button button:hover {
+    background-color: var(--contrast-color);
+}
+
+footer hr {
+    border: 1px solid white;
+    margin-top: 0;
+}
+
+/* FOOTER BOTTOM */
+#button button {
+    background-color: var(--contrast-color);
+    border: none;
+    color: black;
+}
+
+#button button:hover {
+    background-color: var(--contrast-color);
 }
