--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,6 +7,7 @@
     --light-color: #fffbf5;
     --dark-color: #0f0905;
     --light-color-card: #fff8ee;
+    --danger-color: #ff4836;
 }
 
 #app {
