--- a/public/css/gm-index.css
+++ b/public/css/gm-index.css
@@ -5,3 +5,57 @@
 #gm-card-body {
     background-color: var(--light-color-card-hover);
 }
+
+#gm-pic {
+    border: 1px solid var(--primary-color);
+}
+
+/* gm card button */
+
+#show-profile-button {
+    background-color: transparent;
+    color: var(--contrast-color);
+    border: 1px solid var(--contrast-color);
+    padding: 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#gm-edit-button {
+    background-color: var(--primary-color);
+    color: var(--light-color);
+    border: 1px solid var(--primary-color);
+    padding: 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#gm-delete-button {
+    background-color: var(--danger-color);
+    color: var(--light-color);
+    border: 1px solid var(--danger-color);
+    padding: 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+/* gm button hover */
+
+#show-profile-button:hover {
+    background-color: var(--contrast-color);
+    color: var(--light-color);
+    border-color: var(--contrast-color);
+}
+
+#gm-edit-button:hover {
+    background-color: var(--light-color);
+    color: var(--primary-color);
+}
+
+#gm-delete-button:hover {
+    background-color: var(--light-color);
+    color: var(--danger-color);
+}
