--- a/public/css/app-layout.css
+++ b/public/css/app-layout.css
@@ -19,6 +19,15 @@
     padding-left: 0;
 }
 
+.link {
+    text-decoration: none;
+    color: white;
+}
+
+.link:hover {
+    color: var(--contrast-color);
+}
+
 /* FOOTER */
 
 /* FOOTER TOP */
@@ -34,9 +43,17 @@ footer a {
     color: white;
 }
 
+footer a:hover {
+    color: var(--contrast-color);
+}
+
 footer ul {
     list-style: none;
     padding-left: 0;
+}
+
+#email .email {
+    background-color: var(--light-color);
 }
 
 .button button {
@@ -58,6 +75,10 @@ footer hr {
     background-color: var(--contrast-color);
     border: none;
     color: black;
+}
+
+#button button:hover {
+    color: white;
 }
 
 #button button:hover {
