Update sidebarMenu link styles

--- a/public/css/admin-layout.css
+++ b/public/css/admin-layout.css
@@ -11,8 +11,8 @@
 }
 
 #sidebarMenu a:hover {
-    background-color: #ea8e26;
-    color: var(--light-color);
+    background-color: #ffeacf;
+    color: var(--contrast-color);
 }
 
 #header {
