--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -16,3 +16,21 @@
     flex-direction: column;
     min-height: 100vh;
 }
+
+// HEADER STYLES
+
+#header-button {
+    background-color: var(--light-color);
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    padding: 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#header-button:hover {
+    background-color: var(--contrast-color);
+    color: var(--light-color);
+    border-color: var(--contrast-color);
+}
