--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -22,15 +22,33 @@
 #header-button {
     background-color: var(--light-color);
     color: var(--primary-color);
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--light-color);
     padding: 5px 15px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    font-weight: bold;
 }
 
 #header-button:hover {
     background-color: var(--contrast-color);
     color: var(--light-color);
+    border-color: var(--contrast-color);
+}
+
+// footer styles
+
+#footer-button {
+    background-color: var(--contrast-color);
+    color: var(--light-color);
+    border: 1px solid var(--contrast-color);
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#footer-button:hover {
+    background-color: var(--light-color);
+    color: var(--contrast-color);
     border-color: var(--contrast-color);
 }
