--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
+
 // Custom styles variables
 :root {
     --primary-color: #0b1a29;
@@ -15,4 +16,9 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+}
+
+.required::after {
+    content: " *";
+    color: var(--danger-color);
 }
