--- a/public/css/gm-index.css
+++ b/public/css/gm-index.css
@@ -9,6 +9,14 @@
 #gm-pic {
     border: 1px solid var(--primary-color);
     border-radius: 5px;
+    width: 350px;
+    height: 350px;
+}
+
+#gm-pic img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
 }
 
 /* gm card button */
