--- a/public/css/register.css
+++ b/public/css/register.css
@@ -2,11 +2,12 @@
 
 .card {
     overflow: hidden;
-    background-color: red;
 }
 
 #register-card {
     box-shadow: 0 0 1px 0 var(--primary-color);
+    margin-top: 50px;
+    margin-bottom: 200px;
 }
 
 #register-card-header {
