--- a/public/css/gm-index.css
+++ b/public/css/gm-index.css
@@ -12,9 +12,11 @@
     border-radius: 5px;
     width: 350px;
     height: 350px;
+    overflow: hidden;
 }
 
 #gm-pic img {
+    object-fit: cover;
     width: 100%;
     height: 100%;
     border-radius: 5px;
