--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -119,3 +119,18 @@ footer hr {
     content: " *";
     color: var(--danger-color);
 }
+
+.btn-dashboard {
+    background-color: var(--contrast-color);
+    color: var(--light-color);
+    border: 1px solid var(--contrast-color);
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.btn-dashboard:hover {
+    background-color: var(--light-color);
+    color: var(--contrast-color);
+    border-color: var(--contrast-color);
+}
