--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -20,11 +20,11 @@
 
 // HEADER STYLES
 
-#header {
+.header {
     height: 85px;
 }
 
-#header-button {
+.header-button {
     background-color: var(--light-color);
     color: var(--primary-color);
     border: 1px solid var(--light-color);
@@ -35,7 +35,7 @@
     font-weight: bold;
 }
 
-#header-button:hover {
+.header-button:hover {
     background-color: var(--contrast-color);
     color: var(--light-color);
     border-color: var(--contrast-color);
@@ -43,12 +43,13 @@
 
 /* MAIN */
 
-#main {
+.section-main {
     flex-grow: 1;
+    min-height: calc(100vh - 85px);
 }
 
 #dashboard-container {
-    min-height: calc(100vh - 85px);
+    flex-grow: 1;
 }
 
 /* FOOTER */
