--- a/public/css/login.css
+++ b/public/css/login.css
@@ -20,22 +20,9 @@
     color: var(--primary-color);
 }
 
-/* inputs */
-
-#email:focus,
-#password:focus,
-#remember:focus {
-    border-color: var(--contrast-color);
-    box-shadow: 0 0 0 0.25rem rgba(230, 122, 0, 0.25);
-}
-
-#remember:checked {
-    background-color: var(--contrast-color);
-}
-
 /* login card button */
 
-#login-button {
+/* #login-button {
     background-color: transparent;
     color: var(--contrast-color);
     border: 1px solid var(--contrast-color);
@@ -47,11 +34,11 @@
 
 /* login button hover */
 
-#login-button:hover {
+/* #login-button:hover {
     background-color: var(--contrast-color);
     color: var(--light-color);
     border-color: var(--contrast-color);
-}
+}  */
 
 /* forgot password link */
 
