feat: gm edit refactor css

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -158,4 +158,5 @@ footer hr {
 
 .checked-orange:checked {
     background-color: var(--contrast-color);
+    border-color: var(--contrast-color);
 }
