--- a/public/css/gm-edit.css
+++ b/public/css/gm-edit.css
@@ -5,3 +5,16 @@
     box-shadow: 0 0 1px 0 var(--primary-color);
     background-color: var(--light-color-card);
 }
+
+.edit-old-img-container {
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+    border-radius: 3px;
+}
+
+.edit-old-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
