--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -172,3 +172,21 @@ footer hr {
     background-color: var(--contrast-color);
     border-color: var(--contrast-color);
 }
+
+
+.form-check-input {
+    &:checked {
+      background-color: var(--contrast-color) ; 
+      border-color: var(--contrast-color) ;
+  
+      + .form-check-label::before {
+        background-color: var(--contrast-color) ; 
+        border-color: var(--contrast-color) ; 
+        opacity: 1 ; 
+      }
+    }
+    &:focus{
+        border-color: var(--contrast-color);
+    box-shadow: 0 0 0 0.25rem rgba(230, 122, 0, 0.25);
+    }
+  }
