--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -96,6 +96,10 @@ footer hr {
     color: var(--danger-color);
 }
 
+.required-field {
+    font-size: 11px;
+}
+
 /* BUTTONS */
 
 .btn-void-orange {
@@ -176,17 +180,18 @@ footer hr {
 
 .form-check-input {
     &:checked {
-      background-color: var(--contrast-color) ; 
-      border-color: var(--contrast-color) ;
-  
-      + .form-check-label::before {
-        background-color: var(--contrast-color) ; 
-        border-color: var(--contrast-color) ; 
-        opacity: 1 ; 
-      }
-    }
-    &:focus{
+        background-color: var(--contrast-color);
         border-color: var(--contrast-color);
-    box-shadow: 0 0 0 0.25rem rgba(230, 122, 0, 0.25);
+
+        +.form-check-label::before {
+            background-color: var(--contrast-color);
+            border-color: var(--contrast-color);
+            opacity: 1;
+        }
     }
-  }
+
+    &:focus {
+        border-color: var(--contrast-color);
+        box-shadow: 0 0 0 0.25rem rgba(230, 122, 0, 0.25);
+    }
+}
