--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -195,3 +195,8 @@ footer hr {
         box-shadow: 0 0 0 0.25rem rgba(230, 122, 0, 0.25);
     }
 }
+
+//REVIEWS
+.reviews {
+    background-color: var(--light-color-card);
+}
