--- a/public/css/admin-layout.css
+++ b/public/css/admin-layout.css
@@ -32,16 +32,29 @@
 }
 
 /* navbar */
-.navbar-link ul {
-    list-style: none;
-    padding-left: 0;
+
+.items:hover {
+    background-color: var(--primary-color);
+    filter: brightness(1.4);
+    border-radius: 5px;
 }
 
 .link {
     text-decoration: none;
-    color: white;
+    color: white !important;
+    cursor: pointer;
 }
 
-.link:hover {
-    color: var(--contrast-color);
+#header-button {
+    background-color: var(--light-color);
+    color: var(--primary-color);
+    border: 1px solid var(--light-color);
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#header-button:hover {
+    background-color: var(--contrast-color);
+    color: var(--light-color);
+    border-color: var(--contrast-color);
 }
