--- a/public/css/gm-index.css
+++ b/public/css/gm-index.css
@@ -10,13 +10,18 @@
 #gm-pic {
     border: 1px solid var(--primary-color);
     border-radius: 5px;
-    width: 350px;
-    height: 350px;
     overflow: hidden;
+
+    /* //media query tablet  */
+    @media (min-width: 768px) {
+        height: 300px;
+        width: 300px;
+    }
 }
 
 #gm-pic img {
     object-fit: cover;
+    object-position: center;
     width: 100%;
     height: 100%;
     border-radius: 5px;
