feat: refactor succes page and loading

--- a/public/css/gm-promotions.css
+++ b/public/css/gm-promotions.css
@@ -1,12 +1,23 @@
 .tier-label {
-  text-transform: capitalize;
-  font-size: 1.2em;
+    text-transform: capitalize;
+    font-size: 1.2em;
 }
 
 .tier-msg {
-  /* font-size: 0.9em; */
+    /* font-size: 0.9em; */
 }
 
 .tier-price {
-  font-size: 1.2em;
+    font-size: 1.2em;
+}
+
+.container-img {
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+}
+
+img {
+    width: 100%;
+    object-fit: cover;
 }
