--- a/public/css/gm-edit.css
+++ b/public/css/gm-edit.css
@@ -13,6 +13,19 @@
     border-radius: 3px;
 }
 
+@media (max-width: 575px) {
+    .edit-old-img-container {
+        width: 150px;
+        height: 150px;
+    }
+    .d-flex .justify-content-between{
+        flex-direction: column;
+        
+    }
+
+}
+
+
 .edit-old-img {
     width: 100%;
     height: 100%;
