--- a/public/css/gm-stats.css
+++ b/public/css/gm-stats.css
@@ -2,3 +2,52 @@
   width: 70%;
   min-width: 500px;
 }
+
+.month-picker-container {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #333;
+  padding: 20px;
+  background-color: var(--light-color-card);
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: row; /* Changed to row to align items in a line */
+  align-items: center; /* Align items vertically */
+  justify-content: space-between; /* Distribute space between elements */
+  flex-wrap: wrap; /* Allows items to wrap in smaller screens */
+}
+
+.month-picker-container label {
+  font-weight: 600;
+  margin-right: 10px; /* Added margin to the right of labels */
+  color: #555;
+}
+
+.month-picker-container input[type="month"] {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 8px;
+  font-size: 16px;
+  color: #666;
+  background-color: #ffffff;
+  outline: none;
+  transition: border-color 0.3s, box-shadow 0.3s;
+  margin-right: 20px; /* Adds space between the inputs and the next elements */
+  flex-grow: 1;
+}
+
+.month-picker-container input[type="month"]:focus {
+  border-color: var(--contrast-color);
+  /* box-shadow: 0 0 0 2px rgba(0,86,179,0.2); */
+}
+
+@media (max-width: 768px) {
+  .month-picker-container {
+      flex-direction: column;
+  }
+
+  .month-picker-container input[type="month"] {
+      margin-right: 0;
+      margin-bottom: 10px;
+  }
+}
