fix: welcome page bg size

--- a/public/css/welcome-layout.css
+++ b/public/css/welcome-layout.css
@@ -3,6 +3,7 @@
     background-image: url(../img/jumbotron-image.jpeg);
     height: 100vh;
     background-position: center;
+    background-size: cover;
 }
 
 /*LOGO*/
